# snowflake

./: .gitignore  CHANGELOG.md  README.md  app.go  asset.go  err.go  go.mod  index.html  main.go  models.go  package.json  vite.config.ts  wails.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
crates/snowflake_app/: Cargo.toml
crates/snowflake_bin/: Cargo.toml
crates/snowflake_ui/: Cargo.toml
frontend/: index.html  package.json  package.json.md5
frontend/src/: app.tsx  assets-grid.tsx  browser.tsx  detail-info.tsx  global.css  main.tsx
frontend/src/pages/: startup.tsx
frontend/src/widgets/: asset-preview.tsx  folder-tree.tsx  tags-collections.tsx  tags-container.tsx  tags-manager.tsx  toast.tsx  window-controls.tsx
frontend/wailsjs/go/: models.ts
public/locales/en/: translation.json
public/locales/zh/: translation.json
src/: app.tsx  assets-grid.tsx  backend.ts  browser.tsx  context-provider.tsx  context.css  detail-info.tsx  drag-drop-handler.tsx  file-manipulator.tsx  global.css  i18n.ts  language-switch.tsx  main.tsx  shortcut-key-provider.tsx  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  quick-ref.json
src-tauri/resources/: default_settings.json  settings_default.json
src-tauri/src/: app.rs  cmd.rs  compatibility.rs  err.rs  event.rs  lib.rs  models.rs
src/components/: fallbackable-text.tsx  filterable-search.tsx  item-tree.tsx  key-value-list.tsx  layout-resize-bar.tsx  responsive-input.tsx
src/helpers/: context-provider.tsx  file-manipulator.tsx  language-switch.tsx  shortcut-key-provider.tsx  styling.tsx  window-transparency-manager.tsx
src/pages/: app.tsx  asset-download.tsx  global-searcher.tsx  lib-statistics.tsx  overlay-panel.tsx  quick-ref.tsx  settings.tsx  startup.tsx
src/widgets/: asset-image.tsx  asset-manipulation.tsx  asset-preview.tsx  assets-grid.tsx  browser.tsx  browsing-path.tsx  collection-tree.tsx  context-menu.tsx  detail-info.tsx  duplication-list.tsx  err-toast.tsx  file-manipulation.tsx  filterable-search.tsx  folder-preview.tsx  folder-tree.tsx  items-grid.tsx  overlay-panel.tsx  quick-ref-context-menu.tsx  recycle-bin-context-menu.tsx  recycle-bin.tsx  success-toast.tsx  tag-name.tsx  tags-collections.tsx  tags-container.tsx  tags-manager.tsx  window-controls.tsx
tools/: localization_sync.py
(+15 files in other folders)
