[package]
name = "snowflake"
version = "0.1.0"
description = "An asset management for designers and artists."
authors = ["443eb9"]
edition = "2021"

[lib]
name = "snowflake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["serde", "v4"] }
hashbrown = { version = "0.15", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
filetime = "0.2"
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-log = "2"
md5 = "0.7"
crc32fast = "1.4"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
pathdiff = "0.2"
reqwest = "0.12"
futures = "0.3"
imagesize = "0.13"
