[package]
name = "snowflake"
version = "0.1.0"
description = "An asset management for designers and artists."
authors = ["443eb9"]
edition = "2021"

[lib]
name = "snowflake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
hashbrown = { version = "0.15", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
filetime = "0.2"
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-log = "2"
md5 = "0.7"
crc32fast = "1"
hex = "0.4"
pathdiff = "0.2"
reqwest = "0.12"
futures = "0.3"
imagesize = "0.13"
window-vibrancy = "0.5"
file-format = { version = "0.26", features = ["reader"] }
opener = "0.7"
svg = "0.18"
gltf = { version = "1", features = [
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_unlit",
    "KHR_texture_transform",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_materials_specular",
    "KHR_materials_emissive_strength",
] }
glam = "0.29"
base64 = "0.22"
bytemuck = "1"
rand = "0.8"
tauri-plugin-opener = "2"
# Follow with tauri
webview2-com = "0.33"
